# BanglaPDF2Markdown

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  settings.json  test_corpus.py  test_detector.py  test_engine.py  test_ocr.py  test_rules.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bp2md/: bangla_repair.py  config.py  corpus.py  csv_logger.py  database.py  decision.py  detector.py  hybrid.py  ocr.py  output.py  pdf_detector.py  pipeline.py  quality.py  repair.py  repair_engine.py  rule_generator.py  runner.py  utils.py
extractors/: __init__.py  base.py  markitdown_ext.py  pdfplumber_ext.py  poppler_ext.py  pymupdf_ext.py
output/: benchmark.csv  benchmark.db  repaired.txt
output/markitdown/: sample.txt
output/pdfplumber/: sample.txt
output/poppler/: sample.txt
output/pymupdf/: sample.txt
tests/: conftest.py  test_corpus.py  test_detector.py  test_engine.py  test_ocr.py  test_pymupdf.py  test_repair_analyzer.py  test_repair_engine.py  test_rules.py
